# Intellivibe-NewSensor-DK

./: .gitignore  CLAUDE.md
firmware/: CMakeLists.txt  Controller.c  Controller.h  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  sysbuild.conf
firmware/.cache/clangd/index/: Accel.c.E1F0A8D98204893A.idx  Accel.h.7A6A646235196341.idx  Audio.c.B41DDCAFE00BDC29.idx  Audio.h.34B5F691D746075A.idx  Battery.c.AC39565CD659061C.idx  Battery.h.CEB26221422F0518.idx  CommonTypes.h.E5130FB34D30E779.idx  DataProcessing.c.6E76F7E5463037E4.idx  DataProcessing.h.674483524B8CF7B1.idx  Mag.c.97F5CEA87B5F8B57.idx  Mag.h.8029567EB156D1A7.idx  NVS.c.47E981897F91473C.idx  NVS.h.CBBBA2B9A83B24C1.idx  PSRAM.c.95673248B8825782.idx  PSRAM.h.79A876C7D686F235.idx  SysLP.c.696F6DD567FDD851.idx  SysLP.h.9D9269A41D7BB614.idx  Temp.c.9E6852186AB2B029.idx  Temp.h.89326EDFA3D1CF6A.idx  UserConfig.c.F44382C06D02F99B.idx  UserConfig.h.B34A1892F5BF70E4.idx  ble.c.CB158E114668D55B.idx  ble.h.F937712BB95B4A1F.idx  ble_config.c.AFE22068B016B129.idx  ble_config.h.4F158991B2F9CCFC.idx  data_types.h.D98E12E7D368CC79.idx  main.c.F5F88ADB514984E5.idx
firmware/src/: CommonTypes.h  main.c
firmware/src/DataProcessing/: CMakeLists.txt  DataProcessing.c  DataProcessing.h
firmware/src/application/includes/: UserConfig.h
firmware/src/application/src/: UserConfig.c
firmware/src/drivers/: CMakeLists.txt
firmware/src/drivers/Accel/: Accel.c  Accel.h
firmware/src/drivers/Audio/: Audio.c  Audio.h
firmware/src/drivers/BLE/: ble.c  ble.h  ble_config.c  ble_config.h
firmware/src/drivers/Battery/: Battery.c  (+1 more)
(+10 files in other folders)
